--- a/samples/XCT.Sample.FSharp/Xamarin.CommunityToolkit.Sample.FSharp.fsproj
+++ b/samples/XCT.Sample.FSharp/Xamarin.CommunityToolkit.Sample.FSharp.fsproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0-windows</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
