--- a/samples/XCT.Sample.FSharp/Xamarin.CommunityToolkit.Sample.FSharp.fsproj
+++ b/samples/XCT.Sample.FSharp/Xamarin.CommunityToolkit.Sample.FSharp.fsproj
@@ -1,13 +1,26 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
-  <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-  </PropertyGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\src\CommunityToolkit\Xamarin.CommunityToolkit\Xamarin.CommunityToolkit.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="About.txt" />
-  </ItemGroup>
+﻿<?xml version="1.0" encoding="UTF-8"?>
+<Project Sdk="Microsoft.NET.Sdk">
+	<PropertyGroup>
+		<TargetFramework>netstandard2.0</TargetFramework>
+		<EnableDefaultEmbeddedResourceItems>false</EnableDefaultEmbeddedResourceItems>
+	</PropertyGroup>
+	<ItemGroup>
+		<EmbeddedResource Include="MainPage.xaml">
+			<Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+		</EmbeddedResource>
+		<Compile Include="MainPage.xaml.fs">
+			<DependentUpon>MainPage.xaml</DependentUpon>
+		</Compile>
+		<EmbeddedResource Include="App.xaml" />
+		<Compile Include="App.xaml.fs">
+			<DependentUpon>App.xaml</DependentUpon>
+		</Compile>
+		<Compile Include="AssemblyInfo.fs" />
+	</ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="FSharp.Core" Version="5.0.1" />
+	</ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\..\src\CommunityToolkit\Xamarin.CommunityToolkit\Xamarin.CommunityToolkit.csproj" />
+	</ItemGroup>
 </Project>
