--- a/src/CommunityToolkit/Xamarin.CommunityToolkit/Xamarin.CommunityToolkit.csproj
+++ b/src/CommunityToolkit/Xamarin.CommunityToolkit/Xamarin.CommunityToolkit.csproj
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Project Sdk="MSBuild.Sdk.Extras/2.1.2">
+<Project Sdk="MSBuild.Sdk.Extras/3.0.23">
   <PropertyGroup>
     <TargetFrameworks>netstandard1.0;netstandard2.0;netstandard2.1;Xamarin.iOS10;MonoAndroid10.0;Xamarin.TVOS10;Xamarin.WatchOS10;Xamarin.Mac20;tizen40</TargetFrameworks>
     <TargetFrameworks Condition=" '$(OS)' == 'Windows_NT' ">$(TargetFrameworks);uap10.0.17763;uap10.0.19041;netcoreapp3.1;net472;net471</TargetFrameworks>
@@ -53,11 +53,14 @@
   <PropertyGroup Condition=" '$(TargetFramework)' == 'uap10.0.16299' ">
     <DefineConstants>$(DefineConstants);UWP_16299;UWP_14393</DefineConstants>
   </PropertyGroup>
+  <PropertyGroup Condition=" '$(TargetFramework)' == 'uap10.0.17763' ">
+    <DefineConstants>$(DefineConstants);UWP_17763;UWP_16299;UWP_14393</DefineConstants>
+  </PropertyGroup>
   <PropertyGroup Condition=" '$(TargetFramework)' == 'uap10.0.18362' ">
-    <DefineConstants>$(DefineConstants);UWP_18362;UWP_16299;UWP_14393</DefineConstants>
+    <DefineConstants>$(DefineConstants);UWP_18362;UWP_17763;UWP_16299;UWP_14393</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(TargetFramework)' == 'uap10.0.19041' ">
-    <DefineConstants>$(DefineConstants);UWP_19041;UWP_18362;UWP_16299;UWP_14393</DefineConstants>
+    <DefineConstants>$(DefineConstants);UWP_19041;UWP_18362;UWP_17763;UWP_16299;UWP_14393</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="**/*.shared.cs" />
