--- a/samples/XCT.Sample/Xamarin.CommunityToolkit.Sample.csproj
+++ b/samples/XCT.Sample/Xamarin.CommunityToolkit.Sample.csproj
@@ -22,6 +22,12 @@
   </ItemGroup>
   
   <ItemGroup>
+    <Compile Update="Pages\TestCases\TabViewItemBindingView.xaml.cs">
+      <DependentUpon>TabViewItemBindingView.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="Pages\TestCases\TabViewBindingPage.xaml.cs">
+      <DependentUpon>TabViewBindingPage.xaml</DependentUpon>
+    </Compile>
     <Compile Update="Resx\AppResources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
