--- a/samples/XCT.Sample.FSharp/Xamarin.CommunityToolkit.Sample.FSharp.fsproj
+++ b/samples/XCT.Sample.FSharp/Xamarin.CommunityToolkit.Sample.FSharp.fsproj
@@ -25,6 +25,9 @@
 	<ItemGroup>
 		<PackageReference Include="FSharp.Core" Version="5.0.1" />
 		<ProjectReference Include="..\..\src\CommunityToolkit\Xamarin.CommunityToolkit\Xamarin.CommunityToolkit.csproj" />
+		<PackageReference Include="Xamarin.Forms" Version="5.0.0.7268">
+		  <GeneratePathProperty></GeneratePathProperty>
+		</PackageReference>
 	</ItemGroup>
 
 </Project>
