--- a/src/CommunityToolkit/Xamarin.CommunityToolkit/Xamarin.CommunityToolkit.csproj
+++ b/src/CommunityToolkit/Xamarin.CommunityToolkit/Xamarin.CommunityToolkit.csproj
@@ -114,10 +114,9 @@
     <AndroidResource Include="Resources\**\*.axml" />
     <AndroidResource Include="Resources\**\*.xml" />
     <AndroidResource Include="Resources\**\*.png" />
-     <PackageReference Include="Xamarin.AndroidX.Core">
-      <Version>1.3.2.2</Version>
-    </PackageReference>
+    <PackageReference Include="Xamarin.AndroidX.Core" Version="1.5.0"/>
   </ItemGroup>
+  
 
   <ItemGroup Condition=" $(TargetFramework.StartsWith('Xamarin.iOS')) ">
     <Compile Include="**\*.ios.cs" />
