--- a/samples/XCT.Sample/Xamarin.CommunityToolkit.Sample.csproj
+++ b/samples/XCT.Sample/Xamarin.CommunityToolkit.Sample.csproj
@@ -28,6 +28,9 @@
     <Compile Update="Pages\TestCases\TabViewBindingPage.xaml.cs">
       <DependentUpon>TabViewBindingPage.xaml</DependentUpon>
     </Compile>
+    <Compile Update="Pages\Views\TabView\DynamicTabsPage.xaml.cs">
+      <DependentUpon>DynamicTabsPage.xaml</DependentUpon>
+    </Compile>
     <Compile Update="Resx\AppResources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
@@ -42,7 +45,7 @@
     <EmbeddedResource Update="Pages\TestCases\Popups\SimplePopup.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Pages\Views\TabView\TabItemsPage.xaml">
+    <EmbeddedResource Update="Pages\Views\TabView\DynamicTabsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Resx\AppResources.es.resx">
