--- a/samples/XCT.Sample/Xamarin.CommunityToolkit.Sample.csproj
+++ b/samples/XCT.Sample/Xamarin.CommunityToolkit.Sample.csproj
@@ -22,6 +22,9 @@
   </ItemGroup>
   
   <ItemGroup>
+    <Compile Update="Pages\TestCases\SnackBarActionExceptionPage.xaml.cs">
+      <DependentUpon>SnackBarActionExceptionPage.xaml</DependentUpon>
+    </Compile>
     <Compile Update="Pages\TestCases\TabViewItemBindingView.xaml.cs">
       <DependentUpon>TabViewItemBindingView.xaml</DependentUpon>
     </Compile>
