--- a/src/CommunityToolkit/Xamarin.CommunityToolkit/Xamarin.CommunityToolkit.csproj
+++ b/src/CommunityToolkit/Xamarin.CommunityToolkit/Xamarin.CommunityToolkit.csproj
@@ -61,7 +61,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="**/*.shared.cs" />
-    <Compile Include="**/*.shared.*.cs" />
+    <Compile Include="**/*.shared.*.cs" />    
     <None Include="..\..\..\LICENSE" PackagePath="" Pack="true" />
     <None Include="..\..\..\assets\XamarinCommunityToolkit_128x128.png" PackagePath="icon.png" Pack="true" />
     <PackageReference Include="Xamarin.Forms" Version="[5.0.0.1874, 5.0.0.2012]" />
@@ -213,5 +213,13 @@
     <Compile Remove="build\*.cs" />
     <None Include="build\**\*.cs;build\**\*.targets" Pack="true" PackagePath="build" />
   </ItemGroup>
+  <ItemGroup>
+  <Compile Remove="**/DrawingViewRenderer.android.cs" />
+  <Compile Remove="**/DrawingViewRenderer.ios.cs" />
+  <Compile Remove="**/DrawingViewRenderer.macos.cs" />
+  <Compile Remove="**/DrawingViewRenderer.tizen.cs" />
+  <Compile Remove="**/DrawingViewRenderer.gtk.cs" />
+  </ItemGroup>
+  
   <Import Project="..\..\mdoc.targets" Condition=" '$(OS)' == 'Windows_NT' AND '$(GenerateApiDocs)' == 'true'" />
 </Project>
